@@ -1,3 +1,5 @@
+2006/4/16 -- released version 20060416_trunk
+
 2006/4/15 -- released version 20060415_trunk
 
 * adjusted links to new home on oss.oetiker.ch
